fixed the menu z-index issue

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -244,7 +244,7 @@ html, body {
     }
   }
   .dropdown-menu {
-    z-index: 1040;
+    z-index: 1040 !important;
     width: 100%;
     &.dropinline-menu {
       position: relative;
